# codewars_hs

./: cw.cabal
src/: HashTag.hs  PascalsTriangle.hs  SimplifyPoly.hs  SumByFactors.hs
test/: HashTagSpec.hs  PascalsTriangleSpec.hs  SimplifyPolySpec.hs  Spec.hs  SumByFactorsSpec.hs
