name:                cw
version:             0.1.0
build-type:          Simple
cabal-version:       >=1.10


library
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite spec
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: test src
  main-is: Spec.hs
  build-depends: base
               , cw
               , hspec >= 1.11
               , QuickCheck
               , split
               , regex-compat
